gnome-shell.css: fix multiple calendar layout issues
Specifying absolute pixel widths for fields breaks under both font
scaling and translation.

Change all px lengths in the calendar to corresponding pt values, to
fix the layout under larger/smaller font sizes.

Change all "width" specifications to "min-width", for languages with
longer translations. This completely breaks the layout if any field
exceeds the min-width of its column, but that is preferable to
ellipsizing. Needs to be redone using St.Table or the like for 3.0.1.

Also add padding to the right of the calendar popup to match the
padding on the left, since the lack of it becomes more obvious in
layouts where the actual width exceeds the minimum width.

https://bugzilla.gnome.org/show_bug.cgi?id=645693

--- a/data/theme/gnome-shell.css
+++ b/data/theme/gnome-shell.css
@@ -765,7 +765,7 @@ StTooltip StLabel {
 
 #calendarArea {
     /* this is the width of the entire popup */
-    width: 600px;
+    min-width: 600px;
 }
 
 .calendar-vertical-separator {
@@ -903,11 +903,13 @@ StTooltip StLabel {
 }
 
 .events-header-vbox {
-    spacing: 8px;
+    spacing: 6pt;
+    padding-right: 1.75em;
 }
 
-.events-header {
-    height: 40px;
+.events-header-vbox:rtl {
+    padding-right: 0em;
+    padding-left: 1.75em;
 }
 
 .events-header-hbox {
@@ -952,17 +954,17 @@ StTooltip StLabel {
 }
 
 .events-day-name-box {
-    width: 20px;
+    min-width: 15pt;
 }
 
 .events-time-box {
-    width: 70px;
-    padding-right: 8px;
+    min-width: 53pt;
+    padding-right: 6pt;
 }
 
 .events-time-box:rtl {
     padding-right: 0px;
-    padding-left: 8px;
+    padding-left: 6pt;
 }
 
 .events-event-box {
